@@ -226,7 +226,7 @@ public class FileResponse {
     is.close();
 
     // set headers
-    headers.set(Response.CONTENT_LENGTH, new Long(size).toString());
+    headers.set(Response.CONTENT_LENGTH, Long.valueOf(size).toString());
     headers.set(Response.LAST_MODIFIED,
         HttpDateFormat.toString(f.lastModified()));
 
@@ -255,7 +255,7 @@ public class FileResponse {
 
     // set headers
     headers.set(Response.CONTENT_LENGTH,
-        new Integer(this.content.length).toString());
+        Integer.valueOf(this.content.length).toString());
     headers.set(Response.CONTENT_TYPE, "text/html");
     headers.set(Response.LAST_MODIFIED,
         HttpDateFormat.toString(f.lastModified()));
